# SimpleGameEngine

./: CMakeLists.txt  README.md  SDL_Includes.h  main.cpp
Components/: CMakeLists.txt  Camera.h  Collision.h  Components.h  Gravity.h  Grid_Local.h  Image.h  IntervalMove.h  Movable.h  Object.h  Point.h  Renderable.h  Shape.h  Text.h  UserInput.h
Core/: CMakeLists.txt  ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  Types.h
Math/: CMakeLists.txt  Vec2.h  Vec3.h
Primitives/: CMakeLists.txt  Points.cpp  Points.h  Rectangle.cpp  Rectangle.h  utils.h
Systems/: CMakeLists.txt  CollisionSystem.h  PhysicsSystem.h  PlayerControlSystem.h  RenderSystem.h  Systems.h
